--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
     
 }
 
-.pokemonList {
+.pokemons {
     display: grid;
     grid-template-columns: 1fr 1fr;
     list-style: none;
@@ -18,12 +18,59 @@
     margin: 0;
 }
 
-.element {
+.pokemon {
+    display: flex;
+    flex-direction: column;
     margin: 0.5rem;
-    padding: 2rem 1rem;
-    background-color: #14A06F;
-    color: white;
+    padding: 1rem;
+    background-color: #49d0b0;
+    color: #fff;
     border-radius: 1rem;
-    height: 100px;
+   
 }
+
+.detail{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.imgPokemon {
+    border-style: none;
+    max-width: 100%;
+    height: 70px;
+    align-self: flex-end;
+
+}
+
+.number {
+    color: #000;
+    opacity: 0.3;
+    text-align: right;
+    font-size: 0.625rem;
+}
+
+.name {
+    color: #fff;
+    margin-bottom: 0.25rem;
+
+}
+
+.types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+ }
+
+ .type{
+    background-color: #61e1ca;
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
+    border-radius: 1rem;
+ }
+
+
 
