--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,5 +1,15 @@
 .content {
     padding: 1rem;
+    background-color: #fff;
+    height: 100vh;
+    width: 100vw;
+
+    @media (min-width: 992px) {
+        max-width: 992px;
+        margin: 1rem auto;
+        height: auto;
+        
+    }
     
 }
 
@@ -12,10 +22,20 @@
 
 .pokemons {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     list-style: none;
     padding: 0;
     margin: 0;
+
+    @media (min-width: 600px) {
+        grid-template-columns: repeat(5, 1fr);
+
+    }
+
+    @media (min-width: 992px) {
+        grid-template-columns: repeat(4, 1fr);
+
+    }
 }
 
 .pokemon {
