--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -38,6 +38,24 @@
     }
 }
 
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+#loadMoreButton  {
+    font-size: 0.625rem;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25 0;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+}
 .normal {
     background-color: #a6a877;
 }
@@ -54,7 +72,7 @@
     background-color: #678fee;
 }
 
-.eletric {
+.electric {
     background-color: #f7cf2e;
 }
 
